crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns-2.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"true\")"
---
Pattern {
    span: 0..4,
    kind: Lit(
        LitPat {
            lit: Boolean(
                true,
            ),
        },
    ),
}
