crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns-3.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"false\")"
---
Pattern {
    span: 0..5,
    kind: Lit(
        LitPat {
            lit: Boolean(
                false,
            ),
        },
    ),
}
