crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns-4.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"null\")"
---
Pattern {
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    kind: Lit(
        LitPat {
            lit: Null,
        },
    ),
}
