crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns-5.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"undefined\")"
---
Pattern {
    span: 0..9,
    kind: Lit(
        LitPat {
            lit: Undefined,
        },
    ),
}
