crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns-6.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(r#\"\"hello\"\"#)"
---
Pattern {
    kind: Lit(
        LitPat {
            lit: String(
                "hello",
            ),
        },
    ),
    span: 0..7,
    inferred_type: None,
}
