crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_literal_patterns.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"123\")"
---
Pattern {
    span: 0..3,
    kind: Lit(
        LitPat {
            lit: Number(
                "123",
            ),
        },
    ),
}
