crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_object_patterns-2.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"{x, y, ...z}\")"
---
Pattern {
    span: 0..12,
    kind: Object(
        ObjectPat {
            props: [
                Shorthand(
                    ShorthandPatProp {
                        span: 1..2,
                        ident: BindingIdent {
                            name: "x",
                            span: 1..2,
                            mutable: false,
                        },
                        init: None,
                    },
                ),
                Shorthand(
                    ShorthandPatProp {
                        span: 4..5,
                        ident: BindingIdent {
                            name: "y",
                            span: 4..5,
                            mutable: false,
                        },
                        init: None,
                    },
                ),
                Rest(
                    RestPat {
                        arg: Pattern {
                            span: 10..11,
                            kind: Ident(
                                BindingIdent {
                                    name: "z",
                                    span: 10..11,
                                    mutable: false,
                                },
                            ),
                        },
                    },
                ),
            ],
            optional: false,
        },
    ),
}
