crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_object_patterns-3.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"{x: a, y: b, z: c}\")"
---
Pattern {
    span: 0..18,
    kind: Object(
        ObjectPat {
            props: [
                KeyValue(
                    KeyValuePatProp {
                        span: 1..5,
                        key: Ident {
                            name: "x",
                            span: 1..2,
                        },
                        value: Pattern {
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "a",
                                    span: 4..5,
                                    mutable: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
                KeyValue(
                    KeyValuePatProp {
                        span: 7..11,
                        key: Ident {
                            name: "y",
                            span: 7..8,
                        },
                        value: Pattern {
                            span: 10..11,
                            kind: Ident(
                                BindingIdent {
                                    name: "b",
                                    span: 10..11,
                                    mutable: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
                KeyValue(
                    KeyValuePatProp {
                        span: 13..17,
                        key: Ident {
                            name: "z",
                            span: 13..14,
                        },
                        value: Pattern {
                            span: 16..17,
                            kind: Ident(
                                BindingIdent {
                                    name: "c",
                                    span: 16..17,
                                    mutable: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
            ],
            optional: false,
        },
    ),
}
