crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_object_patterns-4.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"{x: {y: {z}}}\")"
---
Pattern {
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    kind: Object(
        ObjectPat {
            props: [
                KeyValue(
                    KeyValuePatProp {
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                        key: Ident {
                            name: "x",
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 2,
                                },
                                end: Position {
                                    line: 1,
                                    column: 3,
                                },
                            },
                        },
                        value: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 13,
                                },
                            },
                            kind: Object(
                                ObjectPat {
                                    props: [
                                        KeyValue(
                                            KeyValuePatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 12,
                                                    },
                                                },
                                                key: Ident {
                                                    name: "y",
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 1,
                                                            column: 6,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 7,
                                                        },
                                                    },
                                                },
                                                value: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 1,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 1,
                                                            column: 12,
                                                        },
                                                    },
                                                    kind: Object(
                                                        ObjectPat {
                                                            props: [
                                                                Shorthand(
                                                                    ShorthandPatProp {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 1,
                                                                                column: 10,
                                                                            },
                                                                            end: Position {
                                                                                line: 1,
                                                                                column: 11,
                                                                            },
                                                                        },
                                                                        ident: BindingIdent {
                                                                            name: "z",
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 1,
                                                                                    column: 10,
                                                                                },
                                                                                end: Position {
                                                                                    line: 1,
                                                                                    column: 11,
                                                                                },
                                                                            },
                                                                            mutable: false,
                                                                        },
                                                                        init: None,
                                                                    },
                                                                ),
                                                            ],
                                                            optional: false,
                                                        },
                                                    ),
                                                },
                                                init: None,
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
            ],
            optional: false,
        },
    ),
}
