crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_object_patterns.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"{x, y, z}\")"
---
Pattern {
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 2,
        },
    },
    kind: Object(
        ObjectPat {
            props: [
                Shorthand(
                    ShorthandPatProp {
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 2,
                            },
                            end: Position {
                                line: 1,
                                column: 3,
                            },
                        },
                        ident: BindingIdent {
                            name: "x",
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 2,
                                },
                                end: Position {
                                    line: 1,
                                    column: 3,
                                },
                            },
                            mutable: false,
                        },
                        init: None,
                    },
                ),
                Shorthand(
                    ShorthandPatProp {
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 5,
                            },
                            end: Position {
                                line: 1,
                                column: 6,
                            },
                        },
                        ident: BindingIdent {
                            name: "y",
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 6,
                                },
                            },
                            mutable: false,
                        },
                        init: None,
                    },
                ),
                Shorthand(
                    ShorthandPatProp {
                        loc: SourceLocation {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        ident: BindingIdent {
                            name: "z",
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                            mutable: false,
                        },
                        init: None,
                    },
                ),
            ],
            optional: false,
        },
    ),
}
