crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_rest.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"...rest\")"
---
Pattern {
    span: 0..3,
    kind: Rest(
        RestPat {
            arg: Pattern {
                span: 3..7,
                kind: Ident(
                    BindingIdent {
                        name: "rest",
                        span: 3..7,
                        mutable: false,
                    },
                ),
            },
        },
    ),
}
