crates/escalier_parser/src/snapshots/escalier_parser__pattern_parser__tests__parse_tuple_patterns-2.snap
---
source: crates/escalier_parser/src/pattern_parser.rs
expression: "parse(\"[a, b, ...c]\")"
---
Pattern {
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 13,
        },
    },
    kind: Tuple(
        TuplePat {
            elems: [
                Some(
                    TuplePatElem {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 2,
                                },
                                end: Position {
                                    line: 1,
                                    column: 3,
                                },
                            },
                            kind: Ident(
                                BindingIdent {
                                    name: "a",
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 2,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 3,
                                        },
                                    },
                                    mutable: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
                Some(
                    TuplePatElem {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 5,
                                },
                                end: Position {
                                    line: 1,
                                    column: 6,
                                },
                            },
                            kind: Ident(
                                BindingIdent {
                                    name: "b",
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 1,
                                            column: 5,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 6,
                                        },
                                    },
                                    mutable: false,
                                },
                            ),
                        },
                        init: None,
                    },
                ),
                Some(
                    TuplePatElem {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 11,
                                },
                            },
                            kind: Rest(
                                RestPat {
                                    arg: Pattern {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 12,
                                            },
                                        },
                                        kind: Ident(
                                            BindingIdent {
                                                name: "c",
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 1,
                                                        column: 11,
                                                    },
                                                    end: Position {
                                                        line: 1,
                                                        column: 12,
                                                    },
                                                },
                                                mutable: false,
                                            },
                                        ),
                                    },
                                },
                            ),
                        },
                        init: None,
                    },
                ),
            ],
            optional: false,
        },
    ),
}
